Header Footer and Center

--- a/page.html
+++ b/page.html
@@ -22,12 +22,13 @@
       <div class="center">
         <img class="logo" src="./images/logo_download.jpg" alt="Google">
         <div class="logo-subtext">UK</div>
+      <div>
+        <input class="search-box" type="text" name="Search" value="">
       </div>
       <div class="boxes">
-        <div class="tooltip">
-          <input class="search-box" type="text" name="Search" value="">
-          <span class="tooltiptext">Search</span>
-        </div>
+          <a id="google-search" href="#">Google Search</a>
+          <a id="feeling-lucky" href="#">I'm Feeling Lucky</a>
+      </div>
       </div>
     </main>
     <footer class="page-footer">
